--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Laboratorios TC2005B feb-jun 2025 QRO",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/Marel52/ElizabethOr_TC2005B/issues"
   },
-  "homepage": "https://github.com/Marel52/ElizabethOr_TC2005B#readme"
+  "homepage": "https://github.com/Marel52/ElizabethOr_TC2005B#readme",
+  "devDependencies": {
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "express-session": "^1.18.1"
+  }
 }
