--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "express-session": "^1.18.1"
+    "body-parser": "^1.20.3",
+    "express-session": "^1.18.1",
+    "pug": "^3.0.3"
   }
 }
