--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.0",
     "pug": "^3.0.3"
   }
 }
